@@ -1,5 +1,5 @@
 AC_INIT(lib/fuse.c)
-AM_INIT_AUTOMAKE(fuse, 1.1-pre1)
+AM_INIT_AUTOMAKE(fuse, 1.1-pre2)
 AM_CONFIG_HEADER(include/config.h)
 
 AC_PROG_CC
